Launchpad automatic translations update.

--- a/po/stellarium/bs.po
+++ b/po/stellarium/bs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-07-21 16:42+0700\n"
-"PO-Revision-Date: 2012-05-24 12:46+0000\n"
+"PO-Revision-Date: 2012-07-24 10:08+0000\n"
 "Last-Translator: Kenan Dervišević <kenan3008@gmail.com>\n"
 "Language-Team: Bosnian <bs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-22 04:34+0000\n"
-"X-Generator: Launchpad (build 15654)\n"
+"X-Launchpad-Export-Date: 2012-07-25 04:36+0000\n"
+"X-Generator: Launchpad (build 15679)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -857,7 +857,7 @@ msgstr "Datum i vrijeme"
 
 #: src/gui/StelGui.cpp:212
 msgid "Stop script execution"
-msgstr ""
+msgstr "Zaustavi izvršavanje skripte"
 
 #: src/gui/StelGui.cpp:215
 msgid "Decrease time speed"
@@ -981,7 +981,7 @@ msgstr "Kopiraj informacije o označenom objektu u memoriju"
 
 #: src/gui/StelGui.cpp:249
 msgid "Go to home"
-msgstr ""
+msgstr "Nazad na početnu"
 
 #: src/gui/StelGui.cpp:251
 msgid "Auto hide horizontal button bar"
@@ -3151,7 +3151,7 @@ msgstr "Prilagođeno"
 
 #: src/ui_configurationDialog.h:956
 msgid "Displayed fields"
-msgstr ""
+msgstr "Prikazana polja"
 
 #: src/ui_configurationDialog.h:957
 msgid "Visual magnitude"
@@ -3163,15 +3163,15 @@ msgstr ""
 
 #: src/ui_configurationDialog.h:961
 msgid "Additional information 1"
-msgstr ""
+msgstr "Dodatna informacija 1"
 
 #: src/ui_configurationDialog.h:962
 msgid "Additional information 3"
-msgstr ""
+msgstr "Dodatna informacija 3"
 
 #: src/ui_configurationDialog.h:963
 msgid "Catalog number(s)"
-msgstr ""
+msgstr "Brojevi kataloga"
 
 #: src/ui_configurationDialog.h:964
 #: plugins/TelescopeControl/src/gui/TelescopeDialog.cpp:269
@@ -3180,7 +3180,7 @@ msgstr "Naziv"
 
 #: src/ui_configurationDialog.h:968
 msgid "Additional information 2"
-msgstr ""
+msgstr "Dodatna informacija 2"
 
 #: src/ui_configurationDialog.h:969
 msgid "Absolute magnitude"
@@ -3188,11 +3188,11 @@ msgstr "Apsolutna veličina"
 
 #: src/ui_configurationDialog.h:971
 msgid "Horizontal coordinates"
-msgstr ""
+msgstr "Vodoravne koordinate"
 
 #: src/ui_configurationDialog.h:973
 msgid "Altitude/Azimuth"
-msgstr ""
+msgstr "Nadmorska visina/Azimut"
 
 #: src/ui_configurationDialog.h:975
 msgid "Angular or physical size"
