--- a/po/stellarium/it.po
+++ b/po/stellarium/it.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-21 16:42+0700\n"
-"PO-Revision-Date: 2012-07-21 18:13+0000\n"
-"Last-Translator: Gianfranco Frisani <gfrisani@libero.it>\n"
+"PO-Revision-Date: 2012-07-24 14:40+0000\n"
+"Last-Translator: Andrea Reguitti <lanzinimarina@alice.it>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-22 04:38+0000\n"
-"X-Generator: Launchpad (build 15654)\n"
+"X-Launchpad-Export-Date: 2012-07-25 04:36+0000\n"
+"X-Generator: Launchpad (build 15679)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -740,7 +740,7 @@ msgstr "Griglia galattica"
 
 #: src/gui/StelGui.cpp:174 src/ui_viewDialog.h:1180
 msgid "Galactic plane"
-msgstr "Livello galattico"
+msgstr "Piano galattico"
 
 #: src/gui/StelGui.cpp:175
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:335
@@ -5503,7 +5503,7 @@ msgstr "Suggerimenti per nebulose"
 
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:359
 msgid "Galactic plane line"
-msgstr "Linea del livello galattico"
+msgstr "Linea del piano galattico"
 
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:388
 msgid "Effects"
