--- a/po/stellarium-skycultures/ky.po
+++ b/po/stellarium-skycultures/ky.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-07-17 14:31+0300\n"
-"PO-Revision-Date: 2012-07-22 13:45+0000\n"
+"PO-Revision-Date: 2012-07-28 23:34+0000\n"
 "Last-Translator: xee2eim7 <q9mwvwxx@lavabit.com>\n"
 "Language-Team: Kirghiz <ky@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-23 05:16+0000\n"
-"X-Generator: Launchpad (build 15654)\n"
+"X-Launchpad-Export-Date: 2012-07-29 04:35+0000\n"
+"X-Generator: Launchpad (build 15694)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -455,7 +455,7 @@ msgstr "Дельфин"
 
 #: skycultures/arabic/constellation_names.eng.fab:23
 msgid "The Dragon"
-msgstr "Улу"
+msgstr "Улуу"
 
 #: skycultures/arabic/constellation_names.eng.fab:24
 msgid "Part of the Horse"
@@ -1064,7 +1064,7 @@ msgstr "Тизелеп тургандын башы"
 
 #: skycultures/arabic/star_names.fab:128
 msgid "Head of the dragon"
-msgstr "Улунун башы"
+msgstr "Улуунун башы"
 
 #: skycultures/arabic/star_names.fab:129
 msgid "The wrist of the kneeling one"
@@ -2058,7 +2058,7 @@ msgstr "Ыйык падышанын орду"
 
 #: skycultures/korean/constellation_names.eng.fab:10
 msgid "Neck of Dragon"
-msgstr "Улунун моюну"
+msgstr "Улуунун моюну"
 
 #: skycultures/korean/constellation_names.eng.fab:11
 msgid "Beheading"
