--- a/plugins/Satellites/ChangeLog
+++ b/plugins/Satellites/ChangeLog
@@ -1,6 +1,7 @@
 0.7.2 [2012-07- in progress]
 Added "Mark all" and "Mark none" buttons to the satellites import window.
 Added a search/filter feature to the main satellites list.
+Fixed duplicate name confusion on double-clicking a satellite in the list.
 
 0.7.1 [2012-01-08]
 Added basic GUI for adding satellites from TLE lists.
