--- a/po/stellarium/stellarium.pot
+++ b/po/stellarium/stellarium.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-07-30 18:28+0700\n"
+"POT-Creation-Date: 2012-07-30 19:36+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1611,7 +1611,7 @@ msgstr ""
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:204
-msgid "A Quintople eclipse from Deimos 2027"
+msgid "A Quintuple eclipse from Deimos 2027"
 msgstr ""
 
 #. TRANSLATORS: Name of script
