Launchpad automatic translations update.

--- a/po/stellarium/es.po
+++ b/po/stellarium/es.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-30 19:36+0700\n"
-"PO-Revision-Date: 2012-07-28 06:43+0000\n"
+"PO-Revision-Date: 2012-07-31 07:46+0000\n"
 "Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-31 04:54+0000\n"
-"X-Generator: Launchpad (build 15702)\n"
+"X-Launchpad-Export-Date: 2012-08-01 04:42+0000\n"
+"X-Generator: Launchpad (build 15719)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
 
@@ -136,8 +136,8 @@ msgstr "Muestra marcas de brújula a lo largo del horizonte"
 msgid ""
 "The old satellites.json file is no longer compatible - using default file"
 msgstr ""
-"El anterior archivo satellites.json ya no es compatible - usando el archivo "
-"por defecto"
+"El archivo satellites.json viejo ya no es compatible - usando el archivo por "
+"defecto"
 
 #: plugins/TelescopeControl/src/TelescopeControl.cpp:78
 msgid ""
@@ -1727,42 +1727,42 @@ msgstr "Zodíaco"
 #. TRANSLATORS: Name of script
 #: src/translations.h:194
 msgid "Mercury Triple Sunrise and Sunset"
-msgstr ""
+msgstr "Triple Amanecer y Atardecer de Mercurio"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:196
 msgid "Double eclipse from Deimos in 2017"
-msgstr ""
+msgstr "Doble eclipse de Deimos en 2017"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:198
 msgid "Double eclipse from Deimos in 2031"
-msgstr ""
+msgstr "Doble eclipse de Deimos en 2031"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:200
 msgid "Eclipse from Olympus Mons Jan 10 2068"
-msgstr ""
+msgstr "Eclipse de Monte Olimpo 10 Ene 2068"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:202
 msgid "Occultation of Earth and Jupiter 2048"
-msgstr ""
+msgstr "Ocultación de la Tierra y Júpiter 2048"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:204
 msgid "A Quintuple eclipse from Deimos 2027"
-msgstr ""
+msgstr "Un Quíntuple eclipse de Deimos 2027"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:206
 msgid "Solar System Screensaver"
-msgstr ""
+msgstr "Salvapantallas del Sistema Solar"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:208
 msgid "Constellations Tour"
-msgstr ""
+msgstr "Paseo por Constelaciones"
 
 #: src/translations.h:211
 msgid "Look around each installed landscape."
@@ -1785,22 +1785,30 @@ msgid ""
 "Due to the quirks in Mercury's orbit and rotation at certain spots the sun "
 "will rise & set 3 different times in one Mercury day."
 msgstr ""
+"Debido a las peculiaridades en la órbita de Mercurio y la rotación en "
+"ciertos lugares el sol saldrá y ocultará 3 diferentes momentos en un día de "
+"Mercurio"
 
 #: src/translations.h:219
 msgid ""
 "Just before Mars eclipses the sun, Phobos pops out from behind and eclipses "
 "it first. Takes place between Scorpio and Sagittarius on April 26, 2017."
 msgstr ""
+"Justo antes de que Marte eclipsa el sol, Fobos sale desde atrás y eclipsa "
+"por primera vez. Se lleva a cabo entre Escorpio y Sagitario el 26 de abril "
+"de 2017."
 
 #: src/translations.h:220
 msgid ""
 "Just before Mars eclipses the sun, Phobos pops out from behind and eclipses "
 "it first. Takes place between Taurus and Gemini on July 23, 2031."
 msgstr ""
+"Justo antes de que Marte eclipsa el sol, Fobos sale desde atrás y lo eclipsa "
+"primero. Se lleva a cabo entre el Tauro y Géminis el 23 de julio de 2031."
 
 #: src/translations.h:221
 msgid "Phobos Eclipses the sun as seen from Olympus Mons Jan 10, 2068."
-msgstr ""
+msgstr "Phobos eclipsa el sol, visto desde el Monte Olimpo 10 de enero 2068."
 
 #: src/translations.h:222
 msgid ""
@@ -1808,6 +1816,10 @@ msgid ""
 "Occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
+"Las ocultaciones de Fobos de la Tierra son comunes, como son las "
+"ocultaciones de Júpiter. Sin embargo, ocultaciones de ambos en el mismo día "
+"son muy raras. Aquí hay uno que se lleva a cabo 1/23/2048. En la velocidad "
+"real."
 
 #: src/translations.h:223
 msgid ""
@@ -1816,15 +1828,21 @@ msgid ""
 "in the SH) again, then Mars totally eclipses the sun and Phobos, and then as "
 "Phobos emerges from the sun it passes through Mars' shadow and dims."
 msgstr ""
+"Fobos se encarrera delante de Marte y eclipsa el sol, pasa a través de él y "
+"luego retrocede de nuevo hacia el sol y sólo lo eclipsa parcialmente de "
+"nuevo (solo visto desde el HS), después Marte eclipsa totalmente el sol y a "
+"Fobos, y a como Fobos emerge desde el sol éste pasa a través de la sombra de "
+"Marte y desaparece."
 
 #: src/translations.h:224
 msgid ""
 "Screensaver of various happenings in the Solar System. 171 events in all!"
 msgstr ""
+"Salvapantalla de varios sucesos en el Sistema Solar. ¡171 eventos en total!"
 
 #: src/translations.h:225
 msgid "A tour via western constellations."
-msgstr ""
+msgstr "Un paseo por las constelaciones occidentales."
 
 #: src/translations.h:228
 msgid "Andorra"
@@ -5960,6 +5978,8 @@ msgid ""
 "A plugin that shows some historical supernovae brighter than visual "
 "magnitude 10: "
 msgstr ""
+"Un complemento que muestra algunas supernovas históricas más brillantes que "
+"una magnitud visual de 10: "
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:115
 msgid "Light curves"
