--- a/po/stellarium/nb.po
+++ b/po/stellarium/nb.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-30 19:36+0700\n"
-"PO-Revision-Date: 2012-07-20 18:52+0000\n"
+"PO-Revision-Date: 2012-07-31 20:10+0000\n"
 "Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-31 04:52+0000\n"
-"X-Generator: Launchpad (build 15702)\n"
+"X-Launchpad-Export-Date: 2012-08-01 04:42+0000\n"
+"X-Generator: Launchpad (build 15719)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
 
@@ -1657,7 +1657,7 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:202
 msgid "Occultation of Earth and Jupiter 2048"
-msgstr ""
+msgstr "Okkultasjon av jorden og Jupiter 2048"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:204
@@ -1667,12 +1667,12 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:206
 msgid "Solar System Screensaver"
-msgstr ""
+msgstr "Solsystem-skjermbeskytter"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:208
 msgid "Constellations Tour"
-msgstr ""
+msgstr "Stjernebildetur"
 
 #: src/translations.h:211
 msgid "Look around each installed landscape."
@@ -1754,10 +1754,11 @@ msgstr ""
 msgid ""
 "Screensaver of various happenings in the Solar System. 171 events in all!"
 msgstr ""
+"Skjermbeskytter med diverse hendelser i solsystemet. 171 begivenheter i alt!"
 
 #: src/translations.h:225
 msgid "A tour via western constellations."
-msgstr ""
+msgstr "En tur gjennom vestlige stjernebilder."
 
 #: src/translations.h:228
 msgid "Andorra"
@@ -5906,6 +5907,8 @@ msgid ""
 "A plugin that shows some historical supernovae brighter than visual "
 "magnitude 10: "
 msgstr ""
+"Et programtillegg som viser noen historiske supernovaer lysere enn visuell "
+"magnitude 10: "
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:115
 msgid "Light curves"
@@ -6231,7 +6234,7 @@ msgstr ""
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:128
 msgid "Maciej Serylak"
-msgstr ""
+msgstr "Maciej Serylak"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:130
 msgid "Nancay Radioastronomical Observatory"
