--- a/po/stellarium/tr.po
+++ b/po/stellarium/tr.po
@@ -8,18 +8,18 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-30 19:36+0700\n"
-"PO-Revision-Date: 2012-06-29 11:17+0000\n"
-"Last-Translator: seaflames <Unknown>\n"
+"PO-Revision-Date: 2012-07-31 08:39+0000\n"
+"Last-Translator: Kaan Akşit <kunguz@gmail.com>\n"
 "Language-Team: <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-31 04:55+0000\n"
-"X-Generator: Launchpad (build 15702)\n"
+"X-Launchpad-Export-Date: 2012-08-01 04:42+0000\n"
+"X-Generator: Launchpad (build 15719)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
-msgstr "Meridian"
+msgstr "Meridyen"
 
 #: src/core/modules/GridLinesMgr.cpp:546 src/ui_viewDialog.h:1176
 msgid "Ecliptic"
@@ -352,7 +352,7 @@ msgstr "Ağ hatası"
 
 #: src/core/SimbadSearcher.cpp:92 src/core/SimbadSearcher.cpp:104
 msgid "Error parsing position"
-msgstr ""
+msgstr "Konumu çözümlemede hata"
 
 #: src/core/SimbadSearcher.cpp:130
 msgid "Querying"
@@ -364,11 +364,11 @@ msgstr "Hata"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Not found"
-msgstr ""
+msgstr "Bulunamadı"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Found"
-msgstr ""
+msgstr "Bulundu"
 
 #: src/gui/ConfigurationDialog.cpp:375
 msgid "Select screenshot directory"
@@ -1129,11 +1129,11 @@ msgstr "yıldıztablosu"
 
 #: src/gui/SearchDialog.cpp:351
 msgid "Simbad Lookup Error"
-msgstr ""
+msgstr "Simbad Sorgu Hatası"
 
 #: src/gui/SearchDialog.cpp:359
 msgid "Simbad Lookup"
-msgstr ""
+msgstr "Simbad Sorgusu"
 
 #: src/gui/SearchDialog.cpp:507
 msgid "University of Strasbourg (France)"
