Launchpad automatic translations update.

--- a/po/stellarium/cs.po
+++ b/po/stellarium/cs.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-05 19:34+0700\n"
-"PO-Revision-Date: 2012-07-29 21:07+0000\n"
+"PO-Revision-Date: 2012-08-06 20:46+0000\n"
 "Last-Translator: Zbyněk Schwarz <Unknown>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-06 04:49+0000\n"
+"X-Launchpad-Export-Date: 2012-08-07 04:45+0000\n"
 "X-Generator: Launchpad (build 15745)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -788,7 +788,7 @@ msgstr "Hvězdy"
 
 #: src/gui/StelGui.cpp:187
 msgid "Stars labels"
-msgstr ""
+msgstr "Jmenovky hvězd"
 
 #: src/gui/StelGui.cpp:188
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:297
@@ -1637,57 +1637,57 @@ msgstr "Trojitý východ a západ Slunce na Merkuru"
 #. TRANSLATORS: Name of script
 #: src/translations.h:196
 msgid "Double eclipse from Deimos in 2017"
-msgstr ""
+msgstr "Dvojité zatmění na Delmos v 2017"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:198
 msgid "Double eclipse from Deimos in 2031"
-msgstr ""
+msgstr "Dvojité zatmění na Delmos v 2031"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:200
 msgid "Eclipse from Olympus Mons Jan 10 2068"
-msgstr ""
+msgstr "Dvojité zatmění na Olympus Mons 10. led 2031"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:202
 msgid "Occultation of Earth and Jupiter 2048"
-msgstr ""
+msgstr "Zákryt Zěme a Jupitera v 2048"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:204
 msgid "A Quintuple eclipse from Deimos 2027"
-msgstr ""
+msgstr "Pětinásobně zatmění na Deimos 2027"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:206
 msgid "Solar System Screensaver"
-msgstr ""
+msgstr "Sluneční soustava - spořič obrazovky"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:208
 msgid "Constellations Tour"
-msgstr ""
+msgstr "Prohlídky souhvězdí"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:210
 msgid "Sun from different planets"
-msgstr ""
+msgstr "Slunce na jiných planetách"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:212
 msgid "Earth best views from other bodies"
-msgstr ""
+msgstr "Nejlepší pohledy na Zemi z jiných těles"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:214
 msgid "Transit of Venus"
-msgstr ""
+msgstr "Přechod Venuše"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:216
 msgid "Analemma"
-msgstr ""
+msgstr "Analema"
 
 #: src/translations.h:219
 msgid "Look around each installed landscape."
@@ -1739,16 +1739,20 @@ msgid ""
 "Just before Mars eclipses the sun, Phobos pops out from behind and eclipses "
 "it first. Takes place between Scorpio and Sagittarius on April 26, 2017."
 msgstr ""
+"Než může Mars Slunce zastínit, Phobos vyskočí a zakryje ho jako první. "
+"Odehrává se mezi souhvězdím Škorpióna a Střelce 26. dubna 2017."
 
 #: src/translations.h:228
 msgid ""
 "Just before Mars eclipses the sun, Phobos pops out from behind and eclipses "
 "it first. Takes place between Taurus and Gemini on July 23, 2031."
 msgstr ""
+"Než může Mars Slunce zastínit, Phobos vyskočí a zakryje ho jako první. "
+"Odehrává se mezi souhvězdím Býka a Blíženců 26. července 2031."
 
 #: src/translations.h:229
 msgid "Phobos Eclipses the sun as seen from Olympus Mons Jan 10, 2068."
-msgstr ""
+msgstr "Phobos zastiňuje Slunce při pozorování z Olympus Mons 10. led 2068."
 
 #: src/translations.h:230
 msgid ""
@@ -1756,6 +1760,9 @@ msgid ""
 "Occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
+"Zakrytí Země měsícem Phobos jsou běžná, tak jako jeho zakrytí Jupitera. Ale "
+"zakrytí obou ve stejný den jsou velmi vzácná. Zde je jedno, které se "
+"uskuteční 23. 1. 2048 ve skutečné rychlosti."
 
 #: src/translations.h:230
 msgid ""
@@ -1764,39 +1771,49 @@ msgid ""
 "in the SH) again, then Mars totally eclipses the sun and Phobos, and then as "
 "Phobos emerges from the sun it passes through Mars' shadow and dims."
 msgstr ""
+"Phobos předběhne Mars a zastíní Slunce, projde ho a pak se retrográdně vrátí "
+"zpět ke Slunci a znovu ho zastíní pouze částečně (lze vidět pouze v SH), pak "
+"Mars zastíní úplně Slunce i Phobos a pak se Phobos ze Slunce vynoří, projde "
+"stínem Marsu a pohasne."
 
 #: src/translations.h:231
 msgid ""
 "Screensaver of various happenings in the Solar System. 171 events in all!"
 msgstr ""
+"Spořič obrazovky s různými událostmi ve sluneční soustavě. Celkem 171 "
+"událostí!"
 
 #: src/translations.h:232
 msgid "A tour via western constellations."
-msgstr ""
+msgstr "Prohlídka západních souhvězdí."
 
 #: src/translations.h:233
 msgid "Look at Sun from big planets of Solar system and Pluto."
-msgstr ""
+msgstr "Pohled na Slunce z velkých planet systému sluneční soustavy a Pluta."
 
 #: src/translations.h:234
 msgid "Earth best views from other Solar system bodies in the 21st Century."
 msgstr ""
+"Nejlepší pohledy na Zemi z ostatních těles sluneční soustavy ve 21. století."
 
 #: src/translations.h:235
 msgid "Transit of Venus as seen from Sydney Australia 6th June 2012."
-msgstr ""
+msgstr "Přechod Venuše jak byl spatřen v australském Sydney  6. června 2012."
 
 #: src/translations.h:236
 msgid ""
 "This script shows the analemma - the path of the Sun across the sky during "
 "the year."
 msgstr ""
+"Tento skript zobrazuje analemu - dráhu Slunce oblohou v průběhu roku."
 
 #: src/translations.h:237
 msgid ""
 "Flash of supernova which was observed by Tycho Brahe in 1572 year. For demos "
 "need enable plugin for supernovae."
 msgstr ""
+"Záblesk supernovy, kterou pozoroval Tycho Brahev roce 1572. Ukázky potřebují "
+"mít zapnutý modul pro supernovy."
 
 #: src/translations.h:240
 msgid "Andorra"
@@ -2802,7 +2819,7 @@ msgstr "Použít jako předvolené"
 
 #: src/ui_locationDialogGui.h:395
 msgid "Return to default"
-msgstr ""
+msgstr "Návrat na výchozí"
 
 #: src/ui_locationDialogGui.h:396 plugins/Oculars/src/ui_ocularDialog.h:880
 #: plugins/Oculars/src/ui_ocularDialog.h:889
@@ -4051,6 +4068,12 @@ msgid ""
 "image scaled, a good deal of the screen can be wasted.  Therefore I "
 "recommend that you leave it off, unless you feel you have a need of it."
 msgstr ""
+"Obrázek, který vidíte na obrazovce můžete zmenšit.  To je určeno pro "
+"zobrazení lepšího srovnání jedné kombinace okuláru/ dalekohled s druhou. "
+"Stejný okulár ve dvou různých teleskopech s různou ohniskovou vzdáleností "
+"vytvoří dva různé výstupní kruhy, což trochu mění pohled. Nevýhodou tohoto "
+"je, že při zmenšení obrazu může být velká část ztracena. Proto je doporučeno "
+"toto nechat vypnuté, pokud to opravdu nepotřebujete."
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:431
 msgid ""
@@ -4234,7 +4257,7 @@ msgstr "Svislé převrácení"
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:242
 msgctxt "tab in plugin windows"
 msgid "About"
-msgstr ""
+msgstr "O aplikaci"
 
 #: plugins/Satellites/src/Satellites.cpp:65
 #: plugins/Satellites/src/ui_satellitesDialog.h:719
@@ -6398,7 +6421,7 @@ msgstr "Úhlová vzdálenost"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:230
 msgid "Discovered year"
-msgstr ""
+msgstr "Rok objevení"
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:106
 msgid "Exoplanets Plug-in"
