--- a/po/stellarium/pl.po
+++ b/po/stellarium/pl.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-05 19:34+0700\n"
-"PO-Revision-Date: 2012-08-05 00:18+0000\n"
+"PO-Revision-Date: 2012-08-07 00:09+0000\n"
 "Last-Translator: pp/bs <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-06 04:53+0000\n"
+"X-Launchpad-Export-Date: 2012-08-07 04:45+0000\n"
 "X-Generator: Launchpad (build 15745)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
@@ -1708,7 +1708,7 @@ msgstr "Tranzyt Wenus"
 #. TRANSLATORS: Name of script
 #: src/translations.h:216
 msgid "Analemma"
-msgstr ""
+msgstr "Analemma"
 
 #: src/translations.h:219
 msgid "Look around each installed landscape."
@@ -1770,10 +1770,14 @@ msgid ""
 "Just before Mars eclipses the sun, Phobos pops out from behind and eclipses "
 "it first. Takes place between Taurus and Gemini on July 23, 2031."
 msgstr ""
+"Tuż przed zaćmieniem Słońca przez Marsa, wyłania się zza niego Phobos i "
+"zaćmiewa go. Zjawisko zachodzi pomiędzy gwiazdozbiorami Byka i Bliźniąt 23 "
+"lipca 2031 r."
 
 #: src/translations.h:229
 msgid "Phobos Eclipses the sun as seen from Olympus Mons Jan 10, 2068."
 msgstr ""
+"Zaćmienie Słońca przez Phobosa widziane z Olympus Mons 10 stycznia 2068 r."
 
 #: src/translations.h:230
 msgid ""
@@ -1794,10 +1798,12 @@ msgstr ""
 msgid ""
 "Screensaver of various happenings in the Solar System. 171 events in all!"
 msgstr ""
+"Wygaszacz ekranu przedstawiający różne zdarzenia w Układzie Słonecznym. W "
+"sumie 171 zjawisk!"
 
 #: src/translations.h:232
 msgid "A tour via western constellations."
-msgstr ""
+msgstr "Wycieczka przez zachodnie gwiazdozbiory."
 
 #: src/translations.h:233
 msgid "Look at Sun from big planets of Solar system and Pluto."
@@ -5652,12 +5658,12 @@ msgstr "rrrrmmdd"
 #. TRANSLATORS: 12-hour time format
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:196
 msgid "12h"
-msgstr ""
+msgstr "12-godz."
 
 #. TRANSLATORS: 24-hour time format
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:198
 msgid "24h"
-msgstr ""
+msgstr "24-godz."
 
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:223
 msgid "Language"
@@ -5689,7 +5695,7 @@ msgstr "Efekty"
 
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:402
 msgid "Manual zoom"
-msgstr ""
+msgstr "Ręczny zoom"
 
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:407
 msgid "Magnitude scaling multiplier"
@@ -5701,7 +5707,7 @@ msgstr "Intensywność Drogi Mlecznej:"
 
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:415
 msgid "Nebula label frequency:"
-msgstr ""
+msgstr "Częstość etykiet mgławic:"
 
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:416
 msgid "Zoom duration:"
@@ -6024,7 +6030,7 @@ msgstr ""
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:115
 msgid "Light curves"
-msgstr ""
+msgstr "Krzywe blasku"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:116
 #, qt-format
@@ -6052,7 +6058,7 @@ msgstr ""
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:123
 msgid "Institute for Theoretical and Experimental Physics"
-msgstr ""
+msgstr "Instytut Fizyki Teoretycznej i Eksperymentalnej"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:124
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:126
@@ -6068,6 +6074,8 @@ msgid ""
 "If you want to read full information about this plugin, its history and "
 "format of catalog, you can %1get info here%2."
 msgstr ""
+"Jeśli chesz przeczytać dokładne informacje o tej wtyczce, jej historii i "
+"formacie katalogu, to %1znajdziesz je tutaj%2."
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:163
 #: plugins/Quasars/src/gui/QuasarsDialog.cpp:156
@@ -6401,7 +6409,7 @@ msgstr "Masa"
 #: plugins/Exoplanets/src/Exoplanet.cpp:212
 #: plugins/Exoplanets/src/Exoplanet.cpp:225
 msgid "Radius"
-msgstr ""
+msgstr "Promień"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:216
 #, qt-format
@@ -6447,7 +6455,7 @@ msgstr "Odległość kątowa"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:230
 msgid "Discovered year"
-msgstr ""
+msgstr "Rok odkrycia"
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:106
 msgid "Exoplanets Plug-in"
@@ -6459,6 +6467,8 @@ msgid ""
 "This plugin plots the position of stars with exoplanets. Exoplanets data is "
 "derived from \"%1The Extrasolar Planets Encyclopaedia%2\""
 msgstr ""
+"Ta wtyczka wykreśla pozycje gwiazd wraz z egzoplanetami. Dane egzoplanet "
+"pochodzą ze strony \"%1The Extrasolar Planets Encyclopaedia%2\""
 
 #. TRANSLATORS: The numbers contain the opening and closing tag of an HTML link
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:122
