--- a/po/stellarium/fr.po
+++ b/po/stellarium/fr.po
@@ -18,14 +18,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-05 19:34+0700\n"
-"PO-Revision-Date: 2012-07-15 17:07+0000\n"
-"Last-Translator: ymadec <ymadec@linuxmail.org>\n"
+"PO-Revision-Date: 2012-08-07 18:42+0000\n"
+"Last-Translator: Vincent Sarrazy <v.sarrazy@gmail.com>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-06 04:49+0000\n"
-"X-Generator: Launchpad (build 15745)\n"
+"X-Launchpad-Export-Date: 2012-08-08 04:35+0000\n"
+"X-Generator: Launchpad (build 15757)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -801,7 +801,7 @@ msgstr "Étoiles"
 
 #: src/gui/StelGui.cpp:187
 msgid "Stars labels"
-msgstr ""
+msgstr "Noms des étoiles"
 
 #: src/gui/StelGui.cpp:188
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:297
@@ -873,7 +873,7 @@ msgstr "Date & Heure"
 
 #: src/gui/StelGui.cpp:212
 msgid "Stop script execution"
-msgstr ""
+msgstr "Arrêter l'exécution du script"
 
 #: src/gui/StelGui.cpp:215
 msgid "Decrease time speed"
@@ -1670,7 +1670,7 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:202
 msgid "Occultation of Earth and Jupiter 2048"
-msgstr ""
+msgstr "Occultation de la Terre et Jupiter en 2048"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:204
@@ -1700,7 +1700,7 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:214
 msgid "Transit of Venus"
-msgstr ""
+msgstr "Transit de Vénus"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:216
@@ -3321,11 +3321,11 @@ msgstr ""
 
 #: src/ui_configurationDialog.h:961
 msgid "Additional information 1"
-msgstr ""
+msgstr "Information additionnelle 1"
 
 #: src/ui_configurationDialog.h:962
 msgid "Additional information 3"
-msgstr ""
+msgstr "Information additionnelle 3"
 
 #: src/ui_configurationDialog.h:963
 msgid "Catalog number(s)"
@@ -3338,7 +3338,7 @@ msgstr "Nom"
 
 #: src/ui_configurationDialog.h:968
 msgid "Additional information 2"
-msgstr ""
+msgstr "Information additionnelle 2"
 
 #: src/ui_configurationDialog.h:969
 msgid "Absolute magnitude"
@@ -3346,7 +3346,7 @@ msgstr "Magnitude absolue"
 
 #: src/ui_configurationDialog.h:971
 msgid "Horizontal coordinates"
-msgstr ""
+msgstr "Coordonnées horizontales"
 
 #: src/ui_configurationDialog.h:973
 msgid "Altitude/Azimuth"
@@ -3358,7 +3358,7 @@ msgstr ""
 
 #: src/ui_configurationDialog.h:977
 msgid "Size"
-msgstr ""
+msgstr "Taille"
 
 #: src/ui_configurationDialog.h:979
 msgid "Geocentric equatorial coordinates, equinox of date"
@@ -3370,7 +3370,7 @@ msgstr ""
 
 #: src/ui_configurationDialog.h:982
 msgid "Distance"
-msgstr ""
+msgstr "Distance"
 
 #: src/ui_configurationDialog.h:984
 msgid "Geocentric equatorial coordinates, equinox of J2000.0"
