--- a/plugins/Satellites/ChangeLog
+++ b/plugins/Satellites/ChangeLog
@@ -3,6 +3,7 @@ Added "Mark all" and "Mark none" buttons to the satellites import window.
 Added a search/filter feature to the main satellites list.
 Fixed duplicate name confusion on double-clicking a satellite in the list.
 Implemented satellite NORAD number search in Stellarium's main search.
+Support night vision mode
 
 0.7.1 [2012-01-08]
 Added basic GUI for adding satellites from TLE lists.
